--- a/example_http_server_and_pipeline/resources/app/templates/index.html
+++ b/example_http_server_and_pipeline/resources/app/templates/index.html
@@ -8,12 +8,15 @@
         .img-container { vertical-align: middle; text-align: center; margin-bottom: 20px; }
         .list-group { margin-bottom: 0; }
         .header { margin-bottom: 20px; }
+        .logo { float: right; margin-top: 20px; height: 64px; }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="header clearfix">
+            <img class="logo" src="/static/logo.png">
             <h3 class="text-muted">Image recognition service</h3>
+            <h4><small>Powered by Kylo, NiFi and Tensorflow</small></h4>
         </div>
 
         {% for item in items %}
